Finished up fixing some validation problems and also changed the pictures on the carousel with creative commens pictures as well as fix some contrast problems.

--- a/KalPortfolio/wwwroot/css/site.css
+++ b/KalPortfolio/wwwroot/css/site.css
@@ -3,6 +3,11 @@ for details on configuring this project to bundle and minify static web assets. 
 
 /*Home styling*/
 
+.validation-summery-errors {
+    color: red;
+    text-decoration: none;
+}
+
 .depth {
     position: absolute;
     background-color: black;
